any style bugs modal on mobile search result in "select token" input search on mobile added icons in exchange page hide tabs title on mobile

--- a/src/app/+convert-processing/send-funds/send-funds.component.scss
+++ b/src/app/+convert-processing/send-funds/send-funds.component.scss
@@ -142,6 +142,8 @@
             justify-content: center;
             flex-wrap: wrap;
             word-break: break-all;
+            flex-direction: column;
+            align-items: center;
 
             .copy {
               display: block;
